<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search"
        android:title="@string/search"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_search_24"/>
    <item
        android:id="@+id/new_group"
        android:title="@string/new_group" />
    <item
        android:id="@+id/new_broadcast"
        android:title="@string/new_broadcast" />
    <item
        android:id="@+id/linked_devices"
        android:title="@string/linked_devices" />
    <item
        android:id="@+id/starred_messages"
        android:title="@string/starred_messages" />
    <item
        android:id="@+id/settings"
        android:title="@string/settings" />
</menu>